sw/source/core/crsr/pam.cxx
@@ -761,6 +761,13 @@ bool SwPaM::HasReadonlySel( bool bFormView ) const
     {
         // Allow editing when the cursor/selection is fully inside of a legacy form field.
         bRet = !( pA != nullptr && !bAtStartA && !bAtStartB && pA == pB );
+
+        if (bRet && rDoc.GetEditShell()->CursorInsideContentControl())
+        {
+            // Also allow editing inside content controls in general, similar to form fields.
+            // Specific types will be disabled below.
+            bRet = false;
+        }
     }
 
     if (!bRet)
